# phazon

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: README.md  next_steps.md
docs/disasm/: targets.md
docs/research/: confidence.md  history.md  methodology.md
docs/spec/: architecture.md  engine_spec.md  parameters.md  signal_flow.md
reference/: compare_network_if.py  network_if_reference.py
src/: ParameterIDs.h  PhazonReverb.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PostProcessChain.h
src/engine/: NetworkIf.cpp  NetworkIf.h
src/presets/: PresetManager.cpp  PresetManager.h
src/synth/: ModMatrix.h  NetworkVoice.cpp  NetworkVoice.h  PhazonSynthesiser.cpp  PhazonSynthesiser.h
src/ui/: PhazonLookAndFeel.h  PresetBrowser.h  StringVisualizer.h
tools/: phazon_verify.cpp
